--- a/Servidor/src/app/public/index.html
+++ b/Servidor/src/app/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Inicio</title>
+    <title>index</title>
     <link rel="stylesheet" href="css/main-index.css">
     <script type="text/javascript" src="js/main-index.js" defer></script>
 </head>
