--- a/Servidor/src/app/public/listar.html
+++ b/Servidor/src/app/public/listar.html
@@ -4,18 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="./js/ler.js"></script>
+    <script type="text/javascript" src="./js/imprime.js"></script>
+    <script type="text/javascript" src="./js/requisicao.js"></script>
     <title>Document</title>
 </head>
 
 <body> 
     
     <div class="containerFlex">
-       
-              <!-- TESTE2 -->
 
         <button type="submit" onclick="loadDoc()">Listar</button>
-        <p id="lista3">teste16</p>
+        <p id="listar">teste16</p>
 
     </div>
 
