--- a/Servidor/src/app/public/listar.html
+++ b/Servidor/src/app/public/listar.html
@@ -10,14 +10,9 @@
 </head>
 
 <body> 
-    
     <div class="containerFlex">
-
-        <button type="submit" onclick="loadDoc()">Listar</button>
-        <p id="listar">teste16</p>
-
+        <button type="submit" onclick="loadDoc('public/teste/')">Listar</button>
     </div>
-
 </body>
 
 </html>
