--- a/Servidor/src/app/public/slides.html
+++ b/Servidor/src/app/public/slides.html
@@ -3,30 +3,32 @@
 
 <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main-carousel.css">
+    <link rel="stylesheet" href="./css/main-carousel.css">
     <script type="text/javascript" src="js/main-carousel.js" defer></script>
     <meta charset="UTF-8">
-    <title>Carousel</title>
+    <title>Slides</title>
 </head>
 
 <body>
-    <header id="menu-principal" onmouseout="esconder()" onmouseover="mostrar()">
+    <div id="setas">
+        <img src="img/up-arrow_icon-icons.com_69828.png" id="cima" onclick="esconder()">
+        <img src="img/down-arrow-2_icon-icons.com_70191.png" id="baixo" onclick="mostrar()">
+    </div>
+    <header id="menu-principal">
         <main>
+
             <div id="header-1">
                 <div id="logo">
-                    <img src="img/logo.png" id="img" onclick="mostrarbarra()">
+                    <img src="./img/logoFocus.png" id="img" onclick="redirecionar()">
                 </div>
-                <div id="voltar-tela">
-                    <img src="img/icons8-cor-48.png" id="retorna" onclick="redirecionar()">
+                <div id="barra-pesquisa">
+                    <input placeholder="Pesquisar" id="input">
+                    <button id="botao-pesquisa" onclick="cliquePesquisa()"></button>
                 </div>
             </div>
+
         </main>
     </header>
-
-    <div id="barra-pesquisa">
-        <input placeholder="Pesquisar" id="pesquisa">
-    </div>
-
     <div id="carousel">
         <button id="esquerda" onclick="troca2()">
         </button>
